Fix spacings and font-size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ h6 {
 
 .ms-divider-light .line,
 .ms-divider-dark .line {
-    width: 250px;
+    width: 150px;
     border-radius: 5px;
 }
 
